fix bug with container gutter on mobile

--- a/web/app/themes/helsinki-testbed/resources/assets/styles/components/site.scss
+++ b/web/app/themes/helsinki-testbed/resources/assets/styles/components/site.scss
@@ -13,6 +13,7 @@
   max-width: $global-width;
   margin-left: auto;
   margin-right: auto;
+  width: 100%;
 
   @include breakpoint-value($container-margins) {
     padding-left: $-bp-value;
